tests/errors/syn_err02.kt
// unbalanced braces error
fun main() {
    println("Hello")